@@ -311,6 +311,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15767) apfilterlanglinks returns duplicate results
 * (bug 15845) Added pageid/fromid parameter to action=delete/move, making
   manipulation of legacy pages with invalid titles possible
+* (bug 15881) Empty or invalid parameters cause database errors 
 
 === Languages updated in 1.14 ===
 
